Added ExtraCurveInfo.minLoadedKey / maxLoadedKey by GOPRF-310